vault/agent.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agent
spec:
  replicas: 1
  restartPolicy: Never
  template:
    spec:
      serviceAccountName: do180
      containers:
      - name: test
        image: quay.io/danielstraub/vault
        command:
        - bash
        args: 
        - -c
        - "sleep infinity"
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        emptyDir: {}
      - name: vault-conf
        configMap:
          name: vault
          items:
          - key: vault-agent
            path: vault.conf
