vault/test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
spec:
  replicas: 1
  restartPolicy: Never
  template:
    spec:
      serviceAccountName: do180
      containers:
      - name: test
        image: registry.straubcloud.de/vault
        command:
        - bash
        args: 
        - -c
        - "sleep infinity"
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        emptyDir: {}
