vault/vault.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
spec:
  replicas: 1
  template:
    spec:
      serviceAccountName: do180
      containers:
      - name: vault
        image: registry.straubcloud.de/vault
        command:
        - vault
        args: 
        - server
        - -config=/etc/vault/vault.conf
        - -dev
        ports:
        - name: http
          containerPort: 8200
          protocol: TCP
        volumeMounts:
        - name: vault-data
          mountPath: /var/lib/vault
        - name: vault-conf
          mountPath: /etc/vault
          readonly: true
      volumes:
      - name: vault-data
        persistentVolumeClaim:
          claimName: vault
      - name: vault-conf
        configMap:
          name: vault
          items:
          - key: vault-server
            path: vault.conf
