vault/service.yml
apiVersion: v1
kind: Service
metadata:
  name: vault
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
