vault/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vault
spec:
  host: vault.straubcloud.de
  to:
    kind: Service
    name: vault
  port:
    targetPort: http
  tls:
    termination: edge   
    insecureEdgeTerminationPolicy: Redirect
